# verbalizer-vs-cot

./: .gitignore  README.md  prereg_jlens.json  prereg_jlens_causal.json  prereg_jlens_causal_scope_bundle.json  prereg_jlens_scope_bundle.json  prereg_organism_v2.yaml  prereg_v3.json  prereg_v3_scope_bundle.json  prereg_v4.json  prereg_v4_scope_bundle.json  prereg_v5.json  prereg_v5_scope_bundle.json  preregistration.yaml  preregistration_jlens.yaml  preregistration_jlens_causal.yaml  preregistration_organism_v3.yaml  preregistration_organism_v4_probe.yaml  preregistration_organism_v5_probe.yaml  pyproject.toml
reports/jlens_audit/: REPORT.md  bundle_causal.json  bundle_main.json  claims_sample.json  gates_jlens.json  jlens_causal.html  jlens_causal.json  jlens_causal.md  jlens_main.html  jlens_main.json  jlens_main.md
reports/organism_v1/: bundle_control.json  bundle_main.json  organism_control.html  organism_control.json  organism_control.md  organism_main.html  organism_main.json  organism_main.md
reports/organism_v2/: bundle_control.json  bundle_main.json  organism_control.html  organism_control.json  organism_control.md  organism_main.html  organism_main.json  organism_main.md
reports/organism_v3/: REPORT.md  bundle_control.json  bundle_main.json  organism_control.html  (+5 more)
scripts/: build_and_audit.py  build_jlens_causal.py  control_records.py  gate_robustness.py  gates_v3.py  generate.py  jlens_audit.py  judge_hintfollow.py  pod_run_organism.sh  probe_ceiling_v4.py  probe_ceiling_v5.py  records_to_prompts.py  train_decoder.py
tests/: test_organism.py
(+22 files in other folders)
